--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,14 @@
-sonar.projectKey=meu-projeto-no-sonar
-sonar.projectName=Meu Projeto Legal
-sonar.projectVersion=1.0
+sonar.projectKey=O-SUSHI-PROJECT_O-SUSHI-BACK-END
+sonar.organization=o-sushi-project
 
-# URL do SonarQube
-sonar.host.url=https://seu-sonarqube.exemplo.com
-sonar.login=${SONAR_TOKEN}
 
-# Ajuste os caminhos abaixo conforme sua stack
-sonar.sources=src
-sonar.tests=tests
-sonar.test.inclusions=**/*test*.js
-sonar.exclusions=**/node_modules/**,**/dist/**
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=O-SUSHI-BACK-END
+#sonar.projectVersion=1.0
 
-# Para cobertura de testes
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
