--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,9 @@
 sonar.projectKey=O-SUSHI-PROJECT_O-SUSHI-BACK-END
 sonar.organization=o-sushi-project
 
+sonar.projectName=O-SUSHI-BACK-END
+sonar.projectVersion=1.0
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=O-SUSHI-BACK-END
-#sonar.projectVersion=1.0
+sonar.sources=.
 
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
