--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
 sonar.projectKey=O-SUSHI-PROJECT_O-SUSHI-BACK-END
 sonar.organization=o-sushi-project
-
 sonar.projectName=O-SUSHI-BACK-END
 sonar.projectVersion=1.0
-
 sonar.sources=.
-
 sonar.sourceEncoding=UTF-8
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
+sonar.javascript.lcov.reportPaths=coverage/unit/lcov.info
+sonar.junit.reportPaths=coverage/unit
