--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cobertura-de-testes
-          path: coverage
+          path: coverage/unit
 
   sonarqube:
     name: 📊 SonarQube - Análise de Código
@@ -45,7 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: cobertura-de-testes
-          path: coverage/unit/
+          path: coverage/unit
 
       - name: 🔍 SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
@@ -59,5 +59,5 @@ jobs:
             -Dsonar.projectVersion=1.0
             -Dsonar.sources=.
             -Dsonar.tests=src
-            -Dsonar.test.inclusions=**/*.(spec|test).ts
+            -Dsonar.test.inclusions="**/*.spec.ts,**/*.test.ts"
             -Dsonar.javascript.lcov.reportPaths=coverage/unit/lcov.info
