--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,46 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  sonarqube:
-    name: 📊 SonarQube - Análise de Código
+  test:
+    name: 🧪 Testes Unitários
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do código
+      - name: 📦 Checkout do código
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: SonarQube Scan
+      - name: 📥 Instalação de dependências
+        run: yarn install --frozen-lockfile
+      
+      - name: 🧪 Executar testes unitários com cobertura
+        run: yarn test:unit
+      
+      - name: 📤 Salvar cobertura como artefato
+        uses: actions/upload-artifact@v4
+        with:
+          name: cobertura-de-testes
+          path: coverage/unit
+
+  sonarqube:
+    name: 📊 SonarQube - Análise de Código
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: 📦 Checkout do código
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: 📥 Baixar artefato de cobertura
+        uses: actions/download-artifact@v4
+        with:
+          name: cobertura-de-testes
+          path: coverage/unit
+
+      - name: 🔍 SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
