--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,11 @@ jobs:
 
       - name: 📥 Instalação de dependências
         run: yarn install --frozen-lockfile
-        working-directory: ./O-SUSHI-BACK-END  # ajuste para o caminho correto
+        working-directory: ./
 
       - name: 🧪 Executar testes unitários com cobertura
         run: yarn test:unit
-        working-directory: ./O-SUSHI-BACK-END  # ajuste para o caminho correto
+        working-directory: ./
 
       - name: 📤 Salvar cobertura como artefato
         uses: actions/upload-artifact@v4
