--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,13 @@
-name: Build
+name: Testes Unitários e SonarQube
 
 on:
   push:
-    branches:
-      - main
+    branches: [main, master]
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: [main, master]
 
 jobs:
   test:
-    name: 🧪 Testes Unitários
     runs-on: ubuntu-latest
 
     steps:
@@ -20,18 +18,17 @@ jobs:
 
       - name: 📥 Instalação de dependências
         run: yarn install --frozen-lockfile
-      
+
       - name: 🧪 Executar testes unitários com cobertura
-        run: yarn test:unit
-      
+        run: yarn test:unit --coverage
+
       - name: 📤 Salvar cobertura como artefato
         uses: actions/upload-artifact@v4
         with:
           name: cobertura-de-testes
-          path: coverage/unit
+          path: ./coverage/unit
 
   sonarqube:
-    name: 📊 SonarQube - Análise de Código
     runs-on: ubuntu-latest
     needs: test
 
@@ -45,19 +42,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: cobertura-de-testes
-          path: coverage/unit
+          path: ./coverage/unit
 
       - name: 🔍 SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=O-SUSHI-PROJECT_O-SUSHI-BACK-END
-            -Dsonar.organization=o-sushi-project
-            -Dsonar.projectName=O-SUSHI-BACK-END
-            -Dsonar.projectVersion=1.0
-            -Dsonar.sources=.
-            -Dsonar.tests=src
-            -Dsonar.test.inclusions="**/*.spec.ts,**/*.test.ts"
-            -Dsonar.javascript.lcov.reportPaths=coverage/unit/lcov.info
