--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,4 @@ sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
 sonar.javascript.lcov.reportPaths=coverage/unit/lcov.info
 sonar.junit.reportPaths=coverage/unit
-sonar.exclusions=**/jest.unit.js
-sonar.exclusions=**/jest.unit.js,./src/main.ts
+sonar.exclusions=**/src/main.ts,/jest.unit.js
