--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dotenv": "^17.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
