--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,8 @@ jobs:
       - name: Run tests
         run: yarn test
       - name: Deploy to Production
-        run: echo "Deploy to production (simulado)"
+        if: github.ref == 'refs/heads/main'
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl "$deploy_url"
